--- a/blog-post.html
+++ b/blog-post.html
@@ -66,6 +66,10 @@
             data-src="img/logo.png"
             alt="logo"
           />
+          <span class="logo-text-header">
+            <span>JUDAHS RECORDS</span>
+            <span>RECORDING STUDIO</span>
+          </span>
         </a>
         <div class="header-right">
           <nav class="main-nav" data-menu-gradient>
@@ -96,13 +100,7 @@
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
               <li><a href="pricing.html">PRICING</a></li>
-              <li class="active">
-                <a href="blog.html">BLOG</a>
-                <ul class="sub-menu">
-                  <li><a href="blog.html">BLOG</a></li>
-                  <li class="active"><a href="blog-post.html">Blog post</a></li>
-                </ul>
-              </li>
+              <li class="active"><a href="blog.html">BLOG</a></li>
               <li><a href="contact.html">CONTACTS</a></li>
             </ul>
             <span class="menu-gradient"></span>
@@ -131,7 +129,7 @@
         <img
           src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
           class="page-name__bg lazy"
-          data-src="./img/page-name_bg.jpg"
+          data-src="./img/news-3.jpg"
           alt="bg"
         />
       </div>
