--- a/blog.html
+++ b/blog.html
@@ -66,6 +66,10 @@
             data-src="img/logo.png"
             alt="logo"
           />
+          <span class="logo-text-header">
+            <span>JUDAHS RECORDS</span>
+            <span>RECORDING STUDIO</span>
+          </span>
         </a>
         <div class="header-right">
           <nav class="main-nav" data-menu-gradient>
@@ -96,13 +100,7 @@
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
               <li><a href="pricing.html">PRICING</a></li>
-              <li class="active">
-                <a href="blog.html">BLOG</a>
-                <ul class="sub-menu">
-                  <li class="active"><a href="blog.html">BLOG</a></li>
-                  <li><a href="blog-post.html">Blog post</a></li>
-                </ul>
-              </li>
+              <li class="active"><a href="blog.html">BLOG</a></li>
               <li><a href="contact.html">CONTACTS</a></li>
             </ul>
             <span class="menu-gradient"></span>
@@ -130,7 +128,7 @@
         <img
           src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
           class="page-name__bg lazy"
-          data-src="./img/page-name_bg.jpg"
+          data-src="./img/news-3.jpg"
           alt="bg"
         />
       </div>
@@ -199,7 +197,7 @@
                     what are the specs and what to consider when making an
                     upgrade.
                   </p>
-                  <a href="#" class="read-more">
+                  <a href="blog-post.html" class="read-more">
                     <svg
                       width="9"
                       height="10"
@@ -265,7 +263,7 @@
                     families and educators are on the same page with the child’s
                     progress, the child flourishes.
                   </p>
-                  <a href="#" class="read-more">
+                  <a href="blog-post.html" class="read-more">
                     <svg
                       width="9"
                       height="10"
@@ -347,7 +345,7 @@
                     you are considering upgrading your plugins to the U/A
                     platform.
                   </p>
-                  <a href="#" class="read-more">
+                  <a href="blog-post.html" class="read-more">
                     <svg
                       width="9"
                       height="10"
@@ -450,7 +448,7 @@
                     families and educators are on the same page with the child’s
                     progress, the child flourishes.
                   </p>
-                  <a href="#" class="read-more">
+                  <a href="blog-post.html" class="read-more">
                     <svg
                       width="9"
                       height="10"
@@ -518,7 +516,7 @@
                       src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/9913211&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"
                     ></iframe>
                   </div>
-                  <a href="#" class="read-more">
+                  <a href="blog-post.html" class="read-more">
                     <svg
                       width="9"
                       height="10"
@@ -631,7 +629,7 @@
                     families and educators are on the same page with the child’s
                     progress, the child flourishes.
                   </p>
-                  <a href="#" class="read-more">
+                  <a href="blog-post.html" class="read-more">
                     <svg
                       width="9"
                       height="10"
