--- a/testimonials.html
+++ b/testimonials.html
@@ -46,6 +46,10 @@
             data-src="img/logo.png"
             alt="logo"
           />
+          <span class="logo-text-header">
+            <span>JUDAHS RECORDS</span>
+            <span>RECORDING STUDIO</span>
+          </span>
         </a>
         <div class="header-right">
           <nav class="main-nav" data-menu-gradient>
@@ -80,10 +84,6 @@
               <li><a href="pricing.html">PRICING</a></li>
               <li>
                 <a href="blog.html">BLOG</a>
-                <ul class="sub-menu">
-                  <li><a href="blog.html">BLOG</a></li>
-                  <li><a href="blog-post.html">Blog post</a></li>
-                </ul>
               </li>
 
               <li><a href="contact.html">CONTACTS</a></li>
@@ -113,7 +113,7 @@
         <img
           src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
           class="page-name__bg lazy"
-          data-src="./img/post-author-bg.jpg"
+          data-src="./img/banner-bg-1.jpg"
           alt="bg"
         />
       </div>
@@ -561,7 +561,11 @@
               <div class="review-block review--dark">
                 <div class="review-content">
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quasi maiores laudantium facilis ut nulla vel eos, ex laboriosam error quis iste modi. Eaque hic deserunt nostrum culpa at consectetur error est laboriosam beatae quam. Quis, soluta natus.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Ullam quasi maiores laudantium facilis ut nulla vel eos, ex
+                    laboriosam error quis iste modi. Eaque hic deserunt nostrum
+                    culpa at consectetur error est laboriosam beatae quam. Quis,
+                    soluta natus.
                   </p>
                   <svg
                     width="86"
@@ -607,7 +611,10 @@
               <div class="review-block">
                 <div class="review-content">
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus eum perspiciatis nam ullam incidunt asperiores, nobis porro et quod sunt quisquam corrupti veritatis, quas totam nesciunt in eligendi expedita ipsum!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Minus eum perspiciatis nam ullam incidunt asperiores, nobis
+                    porro et quod sunt quisquam corrupti veritatis, quas totam
+                    nesciunt in eligendi expedita ipsum!
                   </p>
                   <svg
                     width="86"
