--- a/equipment.html
+++ b/equipment.html
@@ -61,11 +61,15 @@
       <header>
         <a href="index.html" class="logo">
           <img
-            src="./img/engineers-bg.jpg"
+            src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
             class="lazy"
-            data-src="./img/engineers-bg.jpg"
+            data-src="img/logo.png"
             alt="logo"
           />
+          <span class="logo-text-header">
+            <span>JUDAHS RECORDS</span>
+            <span>RECORDING STUDIO</span>
+          </span>
         </a>
         <div class="header-right">
           <nav class="main-nav" data-menu-gradient>
@@ -96,14 +100,7 @@
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
               <li><a href="pricing.html">PRICING</a></li>
-              <li>
-                <a href="blog.html">BLOG</a>
-                <ul class="sub-menu">
-                  <li><a href="blog.html">BLOG</a></li>
-                  <li><a href="blog-post.html">Blog post</a></li>
-                </ul>
-              </li>
-
+              <li><a href="blog.html">BLOG</a></li>
               <li><a href="contact.html">CONTACTS</a></li>
             </ul>
             <span class="menu-gradient"></span>
