--- a/pricing.html
+++ b/pricing.html
@@ -66,6 +66,10 @@
             data-src="img/logo.png"
             alt="logo"
           />
+          <span class="logo-text-header">
+            <span>JUDAHS RECORDS</span>
+            <span>RECORDING STUDIO</span>
+          </span>
         </a>
         <div class="header-right">
           <nav class="main-nav" data-menu-gradient>
@@ -98,10 +102,6 @@
               <li class="active"><a href="pricing.html">PRICING</a></li>
               <li>
                 <a href="blog.html">BLOG</a>
-                <ul class="sub-menu">
-                  <li><a href="blog.html">BLOG</a></li>
-                  <li><a href="blog-post.html">Blog post</a></li>
-                </ul>
               </li>
 
               <li><a href="contact.html">CONTACTS</a></li>
@@ -131,7 +131,7 @@
         <img
           src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
           class="page-name__bg lazy"
-          data-src="./img/page-name_bg.jpg"
+          data-src="./img/post-author-bg.jpg"
           alt="bg"
         />
       </div>
@@ -146,8 +146,8 @@
           <div class="section-header">
             <h2>Our Prices Plans</h2>
             <p>
-              We offer the best recording studio Pricing for true world-class
-              music production you will find anywhere
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+              neque cupiditate minus facilis odit fugit.
             </p>
           </div>
           <div class="prices-slider">
@@ -171,7 +171,7 @@
                   class="pricing-card__top lazy"
                   data-src="img/pricing-card.jpg"
                 >
-                  <p><span>$75</span> / hour</p>
+                  <p><span>₦00</span> / hour</p>
                 </div>
                 <div class="pricing-card__content">
                   <h4>
@@ -222,7 +222,7 @@
                   class="pricing-card__top lazy"
                   data-src="img/pricing-card.jpg"
                 >
-                  <p><span>$95</span> / hour</p>
+                  <p><span>₦00</span> / hour</p>
                 </div>
                 <div class="pricing-card__content">
                   <h4>
@@ -274,7 +274,7 @@
                   class="pricing-card__top lazy"
                   data-src="img/pricing-card.jpg"
                 >
-                  <p><span>$45</span> / hour</p>
+                  <p><span>$00</span> / hour</p>
                 </div>
                 <div class="pricing-card__content">
                   <h4>
@@ -332,8 +332,8 @@
           <div class="section-header">
             <h2>Why Mix In Judahs Records?</h2>
             <p class="fw-700">
-              We take pride in our hard work and dedication to give all projects
-              the high-quality treatment of a professional studio
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repellendus quas illum nulla, in voluptatibus quo!
             </p>
           </div>
           <div
@@ -466,8 +466,8 @@
                 </div>
                 <h4>Sound</h4>
                 <p>
-                  Because here you will find always a valuable contribution in
-                  the selection of the sound of your project
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                  omnis natus accusantium!
                 </p>
               </div>
             </div>
@@ -620,8 +620,8 @@
                 </div>
                 <h4>Ideas</h4>
                 <p>
-                  Because there is an opinion on your work and solutions to make
-                  it more competitive in the industry
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  eligendi tenetur mollitia.
                 </p>
               </div>
             </div>
@@ -774,8 +774,8 @@
                 </div>
                 <h4>Reference</h4>
                 <p>
-                  Because there is a reference which then not be able to do
-                  without it
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Unde, ad.
                 </p>
               </div>
             </div>
@@ -1033,7 +1033,6 @@
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="blog.html">Blog</a></li>
-
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </nav>
