--- a/services.html
+++ b/services.html
@@ -66,6 +66,10 @@
             data-src="img/logo.png"
             alt="logo"
           />
+          <span class="logo-text-header">
+            <span>JUDAHS RECORDS</span>
+            <span>RECORDING STUDIO</span>
+          </span>
         </a>
         <div class="header-right">
           <nav class="main-nav" data-menu-gradient>
@@ -98,10 +102,6 @@
               <li><a href="pricing.html">PRICING</a></li>
               <li>
                 <a href="blog.html">BLOG</a>
-                <ul class="sub-menu">
-                  <li><a href="blog.html">BLOG</a></li>
-                  <li><a href="blog-post.html">Blog post</a></li>
-                </ul>
               </li>
 
               <li><a href="contact.html">CONTACTS</a></li>
@@ -131,7 +131,7 @@
         <img
           src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
           class="page-name__bg lazy"
-          data-src="./img/post-author-bg.jpg"
+          data-src="./img/tile-text-4.jpg"
           alt="bg"
         />
       </div>
