Add artists pictures

--- a/about.html
+++ b/about.html
@@ -149,11 +149,11 @@
               <div class="col-md-12 col-lg-6">
                 <div class="text-section_video mb-xs-20 mb-lg-0">
                   <h2>Lorem ipsum dolor sit amet.</h2>
-                  <div class="img-wrap js-tilt mb-xs-20 mb-md-0">
+                  <div class="img-wrap mb-xs-20 mb-md-0">
                     <img
                       src="./images/img-4-removebg.png"
                       class="text-img lazy"
-                      data-src="./images/img-4-removebg.png"
+                      data-src="./images/img-3-removebg.png"
                       alt="img"
                     />
                   </div>
@@ -928,7 +928,7 @@
                     <p>Engineer / Owner</p>
                   </div>
                   <img
-                    src="img/engineer-1.png"
+                    src="images/img-3-removebg.png"
                     class="engineer-avatar"
                     alt="img"
                   />
@@ -949,7 +949,7 @@
                     <p>Engineer / Owner</p>
                   </div>
                   <img
-                    src="img/engineer-2.png"
+                    src="images/img-1-removebg.png"
                     class="engineer-avatar"
                     alt="img"
                   />
@@ -970,7 +970,7 @@
                     <p>Engineer</p>
                   </div>
                   <img
-                    src="img/engineer-3.png"
+                    src="images/img-2-removebg.png"
                     class="engineer-avatar"
                     alt="img"
                   />
@@ -991,7 +991,28 @@
                     <p>Producer</p>
                   </div>
                   <img
-                    src="img/engineer-4.png"
+                    src="images/img-6-removebg.png"
+                    class="engineer-avatar"
+                    alt="img"
+                  />
+                </div>
+                <div class="desription">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolorem nulla ullam blanditiis! Ipsam, adipisci laborum!
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="tt-slide">
+              <div class="team-card">
+                <div class="engineer-card">
+                  <div class="engineer-card_info">
+                    <h4>John Doe</h4>
+                    <p>Producer</p>
+                  </div>
+                  <img
+                    src="images/img-7-removebg.png"
                     class="engineer-avatar"
                     alt="img"
                   />
