--- a/projects.html
+++ b/projects.html
@@ -2004,16 +2004,19 @@
               <li>
                 <a
                   href="https://www.youtube.com/channel/UCeC_ql70zpNVl-6e8POReuA"
+                  target="_blank"
                   ><i class="fa-brands fa-youtube"></i
                 ></a>
               </li>
               <li>
-                <a href="https://twitter.com/Judahsrecords"
+                <a href="https://twitter.com/Judahsrecords" target="_blank"
                   ><i class="fa-brands fa-twitter"></i
                 ></a>
               </li>
               <li>
-                <a href="https://www.instagram.com/judahsrecords/"
+                <a
+                  href="https://www.instagram.com/judahsrecords/"
+                  target="_blank"
                   ><i class="fa-brands fa-instagram"></i
                 ></a>
               </li>
