--- a/index.html
+++ b/index.html
@@ -316,13 +316,13 @@
                   <h2>Welcome to Judahs Records</h2>
                   <a
                     data-fancybox
-                    href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"
+                    href="https://www.youtube.com/watch?v=BhrKAC2BJPw"
                     class="img-wrap js-tilt"
                   >
                     <img
                       src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
                       class="text-img lazy"
-                      data-src="./img/text-block-video-1.png"
+                      data-src="./img/youtube2.png"
                       alt="bg"
                     />
                     <span class="start-video-wrap">
@@ -344,7 +344,7 @@
                     <img
                       src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
                       class="text-img-bg lazy"
-                      data-src="./img/text-block-video-bg.png"
+                      data-src="./img/judahs.png"
                       alt="img"
                     />
                   </a>
