--- a/testimonials.html
+++ b/testimonials.html
@@ -16,6 +16,10 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/d778668bce.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!--====>> Google fonts <<====-->
     <link
