Remove privacy policy and terms of service

--- a/index.html
+++ b/index.html
@@ -1529,7 +1529,10 @@
       >
         <div class="container">
           <h2 class="text-center white-color mb-xs-20 mb-md-30">
-            Instagram <a href="https://instagram.com/judahsrecords" target="_blank"><span class="theme-color">@JudahsRecords</span></a>
+            Instagram
+            <a href="https://instagram.com/judahsrecords" target="_blank"
+              ><span class="theme-color">@JudahsRecords</span></a
+            >
           </h2>
         </div>
         <div id="instafeed" class="instagram-grid-full"></div>
@@ -1961,10 +1964,6 @@
                 &copy; 2022 Judahs Records Recording Studio. All Rights
                 Reserved.
               </p>
-              <div class="footer-bottom_link text-center">
-                <a href="#">Privacy Policy</a> |
-                <a href="#">Terms of Service</a>
-              </div>
             </div>
           </div>
         </div>
