--- a/blog.html
+++ b/blog.html
@@ -1208,8 +1208,8 @@
                 </div>
                 <div class="contact-list_text">
                   <h5>Working Hours</h5>
-                  <p>Mon-Fri: --:-- am – --:-- pm</p>
-                  <p>Sat-Sun: --:-- am – --:-- pm</p>
+                  <p>Mon-Fri: -- : -- am – -- : -- pm</p>
+                  <p>Sat-Sun: -- : -- am – -- : -- pm</p>
                 </div>
               </li>
             </ul>
@@ -1233,6 +1233,18 @@
                   href="https://www.instagram.com/judahsrecords/"
                   target="_blank"
                   ><i class="fa-brands fa-instagram"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://web.facebook.com/groups/2564501236931088"
+                  target="_blank"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://www.tiktok.com/" target="_blank"
+                  ><i class="fa-brands fa-tiktok"></i
                 ></a>
               </li>
             </ul>
