--- a/equipment.html
+++ b/equipment.html
@@ -789,6 +789,18 @@
                   ><i class="fa-brands fa-instagram"></i
                 ></a>
               </li>
+              <li>
+                <a
+                  href="https://web.facebook.com/groups/2564501236931088"
+                  target="_blank"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://www.tiktok.com/" target="_blank"
+                  ><i class="fa-brands fa-tiktok"></i
+                ></a>
+              </li>
             </ul>
           </div>
           <div class="col-12">
