--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
                   <h2>Lorem ipsum dolor sit amet.</h2>
                   <div class="img-wrap mb-xs-20 mb-md-0">
                     <img
-                      src="./images/img-4-removebg.png"
+                      src="./images/img-3-removebg.png"
                       class="text-img lazy"
                       data-src="./images/img-3-removebg.png"
                       alt="img"
@@ -161,26 +161,28 @@
               </div>
               <div class="col-md-12 col-lg-6">
                 <div class="text-block">
-                  <h2>Lorem ipsum dolor sit amet.</h2>
+                  <h2>Welcome to Judahs Records</h2>
                   <p class="h-sub">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Nesciunt, inventore odit numquam rerum at nam molestias
-                    voluptates sequi doloribus natus.
+                    Judah's Records is an arm of Judah Music Academy with head
+                    office in Benin City, Nigeria.
                   </p>
                   <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Quas, eligendi rerum alias at numquam voluptatibus obcaecati
-                    doloremque, minus id consequuntur placeat cumque asperiores
-                    sunt ratione sequi perferendis cupiditate eveniet deleniti
-                    itaque commodi sapiente aut! Excepturi accusantium quas
-                    fugiat libero. Consequuntur cumque debitis quaerat
-                    consequatur praesentium perferendis quas vel, cum a!
+                    It is a divinely inspired music studio with state of the art
+                    equipment coupled with experienced producers,
+                    instrumentalists and vocalists. A special breed of
+                    songwriters, composers and musical artists has been birthed
+                    since inception who are adding values to the growth and
+                    development of gospel music ministry in Nigeria and the
+                    world at large. 
                   </p>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Fugit quia dolores voluptate est! Cumque qui nesciunt
-                    deleniti necessitatibus iusto ipsum ut animi nobis nisi,
-                    facilis veniam libero sed voluptate in.
+                    Judah's Records is the most featured and
+                    celebrated record label in Benin City, Nigeria with her
+                    productions spanning across the nooks and crannies of the
+                    world. We are highly reputable nation-wide for breeding
+                    first-class music professionals and poised to cater for the
+                    needs of the young music artists in the Gospel music
+                    industry.
                   </p>
                 </div>
               </div>
