--- a/index.html
+++ b/index.html
@@ -492,7 +492,6 @@
                 </div>
               </div>
               <picture>
-                <!-- <source type="image/webp" srcset="img/studio-1.webp"> -->
                 <source type="image/jpeg" srcset="img/studio-1.jpg" />
                 <img src="img/studio-1.jpg" class="studio-photo" alt="img" />
               </picture>
@@ -514,7 +513,6 @@
                 </div>
               </div>
               <picture>
-                <!-- <source type="image/webp" srcset="img/studio-2.webp"> -->
                 <source type="image/jpeg" srcset="img/studio-2.jpg" />
                 <img src="img/studio-2.jpg" class="studio-photo" alt="img" />
               </picture>
@@ -536,7 +534,6 @@
                 </div>
               </div>
               <picture>
-                <!-- <source type="image/webp" srcset="img/studio-3.webp"> -->
                 <source type="image/jpeg" srcset="img/studio-3.jpg" />
                 <img src="img/studio-3.jpg" class="studio-photo" alt="img" />
               </picture>
@@ -1298,9 +1295,12 @@
               <div class="section-header">
                 <h2>Our Artists</h2>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-                  modi accusamus totam perspiciatis, possimus alias iste quidem
-                  deleniti illo commodi?
+                  Judah's Records has an outstanding team headed by Evang.
+                  Victor Ikeji whose decades of professional training, mentoring
+                  and coaching programs to over 500 individuals and music groups
+                  has earned the team tremendous results in the past years
+                  including numerous singles, tracks, EPs and albums
+                  productions.
                 </p>
               </div>
               <div
@@ -1361,8 +1361,7 @@
                       </a>
                     </div>
                     <picture>
-                      <source type="image/webp" srcset="img/engineer-1.webp" />
-                      <source type="image/jpeg" srcset="img/engineer-1.png" />
+                      <source type="image/jpeg" srcset="images/img-3-removebg.png" />
                       <img
                         src="img/engineer-1.png"
                         class="engineer-avatar"
@@ -1390,10 +1389,9 @@
                       </a>
                     </div>
                     <picture>
-                      <source type="image/webp" srcset="img/engineer-2.webp" />
-                      <source type="image/jpeg" srcset="img/engineer-2.png" />
+                      <source type="image/jpeg" srcset="images/img-1-removebg.png" />
                       <img
-                        src="img/engineer-2.png"
+                        src="images/img-1-removebg.png"
                         class="engineer-avatar"
                         alt="img"
                       />
@@ -1419,10 +1417,9 @@
                       </a>
                     </div>
                     <picture>
-                      <source type="image/webp" srcset="img/engineer-3.webp" />
-                      <source type="image/jpeg" srcset="img/engineer-3.png" />
+                      <source type="image/jpeg" srcset="images/img-2-removebg.png" />
                       <img
-                        src="img/engineer-3.png"
+                        src="images/img-2-removebg.png"
                         class="engineer-avatar"
                         alt="img"
                       />
@@ -1448,10 +1445,9 @@
                       </a>
                     </div>
                     <picture>
-                      <source type="image/webp" srcset="img/engineer-4.webp" />
-                      <source type="image/jpeg" srcset="img/engineer-4.png" />
+                      <source type="image/jpeg" srcset="images/img-5-removebg.png" />
                       <img
-                        src="img/engineer-4.png"
+                        src="images/img-5-removebg.png"
                         class="engineer-avatar"
                         alt="img"
                       />
@@ -1477,10 +1473,9 @@
                       </a>
                     </div>
                     <picture>
-                      <source type="image/webp" srcset="img/engineer-5.webp" />
-                      <source type="image/jpeg" srcset="img/engineer-5.png" />
+                      <source type="image/jpeg" srcset="images/img-6-removebg.png" />
                       <img
-                        src="img/engineer-5.png"
+                        src="images/img-6-removebg.png"
                         class="engineer-avatar"
                         alt="img"
                       />
@@ -1506,10 +1501,9 @@
                       </a>
                     </div>
                     <picture>
-                      <source type="image/webp" srcset="img/engineer-6.webp" />
-                      <source type="image/jpeg" srcset="img/engineer-6.png" />
+                      <source type="image/jpeg" srcset="images/img-7-removebg.png" />
                       <img
-                        src="img/engineer-6.png"
+                        src="images/img-7-removebg.png"
                         class="engineer-avatar"
                         alt="img"
                       />
