--- a/about.html
+++ b/about.html
@@ -148,12 +148,12 @@
             <div class="row align-items-center">
               <div class="col-md-12 col-lg-6">
                 <div class="text-section_video mb-xs-20 mb-lg-0">
-                  <h2>Lorem ipsum dolor sit amet.</h2>
+                  <h2>Welcome to Judah Records</h2>
                   <div class="img-wrap mb-xs-20 mb-md-0">
                     <img
-                      src="./images/img-3-removebg.png"
+                      src="./images/img-8-removebg.png"
                       class="text-img lazy"
-                      data-src="./images/img-3-removebg.png"
+                      data-src="./images/img-8-removebg.png"
                       alt="img"
                     />
                   </div>
