Edit equipments section

--- a/equipment.html
+++ b/equipment.html
@@ -135,60 +135,84 @@
     </section>
     <!-- End page-name -->
     <main>
-      <!-- Begin fluid text-section -->
+      <!-- Begin text-section -->
       <section
         class="white-section parralax-section pb-xs-25 pb-md-25 pb-lg-60"
       >
-        <div class="text-section fluid-text-section text-position-right ovh">
-          <div class="container-fluid">
-            <div class="row align-items-center">
-              <div class="fluid-text-img">
-                <div class="img-wrap">
+        <div
+          class="text-section ovh pt-xs-25 pt-md-25 pt-lg-60 pb-xs-25 pb-md-25 pb-lg-60"
+        >
+          <div class="container">
+            <div class="row flex-row-reverse align-items-center">
+              <div class="col-md-6">
+                <!-- <div class="text-section_video">
+                  <a
+                    data-fancybox
+                    href="https://www.youtube.com/watch?v=BhrKAC2BJPw"
+                    class="img-wrap js-tilt"
+                  >
+                    <img
+                      src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
+                      class="text-img lazy"
+                      data-src="./img/youtube2.png"
+                      alt="bg"
+                    />
+                    <span class="start-video-wrap">
+                      <span class="start-video">
+                        <svg
+                          width="17"
+                          height="21"
+                          viewBox="0 0 17 21"
+                          xmlns="http://www.w3.org/2000/svg"
+                        >
+                          <path
+                            fill-rule="evenodd"
+                            clip-rule="evenodd"
+                            d="M16.0292 8.58421L2.72036 0.198875C2.32691 -0.0353675 1.83836 0.00365848 1.46938 0.00365848C-0.00654693 0.00365848 5.06374e-07 1.14317 5.06374e-07 1.43185V18.5706C5.06374e-07 18.8146 -0.00646083 19.9988 1.46938 19.9988C1.83836 19.9988 2.327 20.0377 2.72036 19.8035L16.0291 11.4183C17.1215 10.7683 16.9327 10.0012 16.9327 10.0012C16.9327 10.0012 17.1216 9.23412 16.0292 8.58421Z"
+                          />
+                        </svg>
+                      </span>
+                    </span>
+                    <img
+                      src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
+                      class="text-img-bg lazy"
+                      data-src="./img/judahs.png"
+                      alt="img"
+                    />
+                  </a>
+                </div> -->
+              </div>
+              <div class="col-md-6">
+                <div class="text-block">
+                  <h2>What we use for perfect sound</h2>
+                  <p class="h-sub">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Dignissimos minima quibusdam corporis repellat?
+                  </p>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                    nisi quod pariatur, harum quo nostrum aperiam nulla ad
+                    quaerat corrupti amet nam architecto quidem accusantium
+                    reprehenderit tempora. Temporibus enim ipsa assumenda minus
+                    nisi. Amet, repellendus. Aperiam harum molestias quis id
+                    ratione quasi, dicta, voluptas odio quidem sed nesciunt
+                    officiis aspernatur soluta tempore beatae odit! Reiciendis
+                    odit rem veritatis ullam. Reiciendis molestias doloremque
+                    officiis neque dolor ratione ab expedita veniam quo!
+                  </p>
                   <img
                     src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
-                    class="text-img lazy"
-                    data-src="./img/microphone.png"
+                    class="lazy"
+                    data-src="./img/sign.png"
                     alt="bg"
                   />
-                </div>
-              </div>
-              <div class="offset-md-6 col-md-6 pt-xs-50 pt-md-50 pt-lg-120">
-                <div class="text-block">
-                  <h2>What We Use for Perfect Sound</h2>
-                  <p class="h-sub">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Pariatur natus veritatis repellendus?
-                  </p>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Dolorum dolorem pariatur velit quam illo tempora iusto rerum
-                    magnam unde ab quo numquam nulla perspiciatis vero veritatis
-                    sapiente labore, maxime sunt blanditiis officia totam. Ipsum
-                    maxime vitae sed. Sit consequuntur hic rerum sint pariatur
-                    nisi sapiente iure quia. Aperiam, amet vitae!
-                  </p>
-                  <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Pariatur voluptate, aspernatur dolorem dignissimos illo
-                    eligendi nulla alias autem harum consequuntur sequi dicta
-                    doloremque quisquam provident eos tempore corrupti officia
-                    incidunt!
-                  </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <img
-          src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
-          class="parallax-img parallax-right animate tt-paroller lazy"
-          data-src="img/paralax-4.png"
-          data-paroller-factor="0.15"
-          data-paroller-type="foreground"
-          alt="bg"
-        />
       </section>
-      <!-- End fluid text-section -->
+      <!-- End text-section -->
       <!-- Begin tile info section -->
       <section class="pt-xs-25 pt-md-25 pt-lg-60">
         <div class="tile-list">
